added glow in image also fixed the bg

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       height: 100vh;
     }
   </style>
-  <body>
+  <body class="overflow-x-hidden bg-grid-image bg-cover min-h-screen">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
